Call suddenTerminationChanged directly https://bugs.webkit.org/show_bug.cgi?id=83114

Patch by Mark Pilgrim <pilgrim@chromium.org> on 2012-04-04
Reviewed by Adam Barth.

Source/WebCore:

* platform/chromium/PlatformSupport.h:
(PlatformSupport):
* platform/chromium/SuddenTerminationChromium.cpp:
(WebCore::disableSuddenTermination):
(WebCore::enableSuddenTermination):

Source/WebKit/chromium:

* src/PlatformSupport.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/100556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113219 268f45cc-cd09-0410-ab3c-d52691b4dbfc