Source/WebCore/platform/chromium/PlatformSupport.h
@@ -260,9 +260,6 @@ public:
     static void histogramCustomCounts(const char* name, int sample, int min, int max, int bucketCount);
     static void histogramEnumeration(const char* name, int sample, int boundaryValue);
 
-    // Sudden Termination
-    static void suddenTerminationChanged(bool enabled);
-
     // Theming ------------------------------------------------------------
 #if OS(WINDOWS)
     static void paintButton(
